28Apr01=======================================================================
1. fix an occasional problem with 'sorry connected to' messages
23Apr01=======================================================================
1. fix very long standing bug in storing and transmitting spots. The decimal
point was left off :-(
22Apr01=======================================================================
1. Sysops can now have full privileges if there is a ExtMsg listener on 
localhost (or everything) and they telnet to localhost and login with their
callsign. This means that they don't need a client anymore (for local access)
2. added input spot filtering. 
3. Added run_cmd to DXCron which allows you to run any command on the system
from the crontab. (Dunno why I didn't do this before). 
18Apr01=======================================================================
1. added Ian M0AZM's Java Client (SpiderConsole)
17Apr01=======================================================================
1. made a slight speedup on write in Msg.pm (about doubled it)
16Apr01=======================================================================
1. make the correct error messages come out on reject/accept when people
leave out keywords like 'on'.
2. Fairly major changes to the documentation tree.  Split the admin manual
into 2 sections, Installation and Admin and merge the Windows stuff.
15Apr01=======================================================================
1. made some mods to the sgml documentation for 1.47
2. added show/connect command
11Apr01=======================================================================
1. fixed more of the "xxx disappeared from yyy" messages
2. altered the build no logic so that it always checksums the same files
regardless of whatever else you might have in the directory.
3. made shortcut at shutdown so that you don't get a storm of PC21s on busy
nodes as each connection goes down. Just send a pc39 to each interface and
nothing else.